2013-11-30  Jim Fowler  <jrf@Biblion>

	* WebPages/Collecting.txt: Added www.collectorsfolio.com

2013-11-28  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/Resources/symbols.txt: Added capital R
	with caron.

2013-11-15  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/Resources/symbols.txt: Added u with circunflex
	and raised letter e.

2013-10-10  Jim Fowler  <jrf@Biblion>

	* Tools/doc: Updated installation.rst and operations.rst
	documentation as well fix as a mistake in menus.py. Added ./images
	directory and moved all documentation images into it.

2013-10-06  Jim Fowler  <jrf@Biblion>

	* Tools/ajbbooks (main): Added resources files and designed icon
	for ajbbooks program.  Used inkscape program to build icon.

2013-10-05  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/mainWindow.py (BookEntry.EntryToDisplay): modified
	to support entry suffix.

	* Tools/bookentry/AJBentry.py (AJBentry): modified numStr(),
	isValidAjbEntry(), and parseAJBEntry() to support the suffix field
	in the AJB number. Added new tests.

	* Tools/bookentry/entry.py (Entry.blankEntry): Added 'entrySuf' to
	Num field of entry dictionary.  This allows AJB numbers of the
	form 55.66.77a which is required in a few cases.

	* Tools/bookentry/AJBcomments.py (Item): Added option to have a
	letter in the reference or reprint portion of a comment. Added new
	tests as well.

	* Tools/bookentry/symbols.txt: Added capital C with caron

2013-09-30  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: added small and capital Z with
	acute accent.

2013-09-28  Jim Fowler  <jrf@Biblion>

	* Tools/ajbbooks (main): Added icon to ajbbooks program.  Need to
	set up resource file.

2013-09-14  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/mainWindow.py
	(BookEntry.setVolumeNumberInteractive): Added
	setVolumeNumberInteractive() function using QInputDialog()
	class. Associated menu item also added.

2013-05-25  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: added a, e, i with macron and